--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
         <div class="content-wrapper section-data">
             <h1 class="gridly__main-title">Gridly - Grid Set Light</h1>
             
-            <section class="row">
+            <section class="row gridly__row--red">
                 <div class="col-sm-6 col-m-4">
                     col-sm-6 / col-m-4
                 </div>
@@ -26,7 +26,7 @@
 
             <div class="gridly__separator">&nbsp;</div>
             
-            <section class="row">
+            <section class="row gridly__row--green">
                 <div class="col-sm-12 col-m-6">
                     col-sm-12 / col-m-6
                 </div>
@@ -37,7 +37,7 @@
 
             <div class="gridly__separator">&nbsp;</div>
 
-            <section class="row">
+            <section class="row gridly__row--blue">
                 <div class="col-sm-3 col-m-4 col-ml-6">
                     col-sm-3 / col-m-4 / col-ml-6
                 </div>
