--- a/html/index.html
+++ b/html/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes, maximum-scale: 2.0" />
 
-    <link rel="stylesheet" href="./assets/css/style.css"/>
     <link rel="stylesheet" href="./assets/css/gridly.css"/>
+    <link rel="stylesheet" href="./assets/css/gridly-example.css"/>
     <title>Gridly: vomar.de</title>
 </head>
     <body>
