added gutter to grid

--- a/html/index.html
+++ b/html/index.html
@@ -9,7 +9,7 @@
     <title>Gridly: vomar.de</title>
 </head>
     <body>
-        <div class="content-wrapper section-data">
+        <div class="content-wrapper gridly__content-wrapper">
             <h1 class="gridly__main-title">Gridly - Grid Set Light</h1>
             
             <section class="row gridly__row--red">
