--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,12 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes, maximum-scale: 2.0" />
 
-    <link rel="stylesheet" href="./assets/css/style.css"/>
     <link rel="stylesheet" href="./assets/css/gridly.css"/>
+    <link rel="stylesheet" href="./assets/css/gridly-example.css"/>
     <title>Gridly: vomar.de</title>
 </head>
     <body>
-        <div class="content-wrapper section-data">
+        <div class="content-wrapper gridly__content-wrapper">
             <h1 class="gridly__main-title">Gridly - Grid Set Light</h1>
             
             <section class="row gridly__row--red">
@@ -51,6 +51,31 @@
                     col-sm-3 / col-m-4 / col-ml-6
                 </div>
             </section>
+
+            <div class="gridly__separator">&nbsp;</div>
+
+
+            <section class="row table-row-m gridly__row--yellow">
+                <div class="col-sm-3 table-cell-m-4">
+                    col-sm-3 <br />
+                    table-cell-m-4
+                </div>
+                <div class="col-sm-3 table-cell-m-4">
+                    col-sm-3 / table-cell-m-4
+                </div>
+                <div class="col-sm-3 table-cell-m-8">
+                    col-sm-3 / table-cell-m-8<br />
+                    The table-cell changes the floated layout to a fixed table-cell.
+                    To get the table-cell works correctly it is needed also to define, in which
+                    viewport the layout change to table representation.<br />
+                    Therefore it is needed to set a table-row(x) class in respnse to the viewport, too.
+                </div>
+                <div class="col-sm-3">
+                    col-sm-3 / table-cell-m-4 <br/>
+                    If a column has no matching table-cell representation for the actual vieport then it will be hidden.
+                </div>
+            </section>
+
         </div>
     
         <div class="viewport-info">
