provided flexbox example

--- a/html/index.html
+++ b/html/index.html
@@ -51,6 +51,26 @@
                     col-sm-3 / col-m-4 / col-ml-6
                 </div>
             </section>
+
+            <div class="gridly__separator">&nbsp;</div>
+
+            <section class="row row-s--flexed gridly__row--gray">
+                <div class="col-sm-3 col-m-4 col-ml-6">
+                    col-sm-3 / col-m-4 / col-ml-6<br />
+                    Example of a flexed row, if oprtion is available in browser,
+                    then the columns should be justiefied placed and of same height.
+                </div>
+                <div class="col-sm-3 col-m-4 col-ml-6">
+                    col-sm-3 / col-m-4 / col-ml-6
+                </div>
+                <div class="col-sm-3 col-m-4 col-ml-6">
+                    col-sm-3 / col-m-4 / col-ml-6
+                </div>
+                <div class="col-sm-3 col-m-4 col-ml-6">
+                    col-sm-3 / col-m-4 / col-ml-6
+                </div>
+            </section>
+
         </div>
     
         <div class="viewport-info">
