provided flexbox example

--- a/html/index.html
+++ b/html/index.html
@@ -51,8 +51,30 @@
                     col-sm-3 / col-m-4 / col-ml-6
                 </div>
             </section>
+
+            <div class="gridly__separator">&nbsp;</div>
+
+            <section class="row row-sm--flexed gridly__row--gray">
+                <div class="col-sm-3 col-m-4 col-ml-6">
+                    col-sm-3 / col-m-4 / col-ml-6<br />
+                    This columns shows an example of the row-(x)--flexed option.
+                    If set the columns should be justified and having the same height.
+                    This option is only supported for browser who support the flex properties probably.
+
+                </div>
+                <div class="col-sm-3 col-m-4 col-ml-6">
+                    col-sm-3 / col-m-4 / col-ml-6
+                </div>
+                <div class="col-sm-3 col-m-4 col-ml-6">
+                    col-sm-3 / col-m-4 / col-ml-6
+                </div>
+                <div class="col-sm-3 col-m-4 col-ml-6">
+                    col-sm-3 / col-m-4 / col-ml-6
+                </div>
+            </section>
         </div>
-    
+
+
         <div class="viewport-info">
             <div class="viewport-info__section viewport-info__section--xs">XS</div>
             <div class="viewport-info__section viewport-info__section--s">S</div>
