added no-padded options to columns

--- a/html/index.html
+++ b/html/index.html
@@ -72,6 +72,21 @@
                     col-sm-3 / col-m-4 / col-ml-6
                 </div>
             </section>
+
+            <div class="gridly__separator">&nbsp;</div>
+
+            <section class="row row-sm--flexed gridly__row--red">
+                <div class="col-xs-12 col-xs--no-padded">
+                    col-xs-12 col-xs--no-padded
+                </div>
+                <div class="col-xs-12 col-xs--no-padded">
+                    Shows an example of columns which contains no padding top top and bottom.
+                </div>
+                <div class="col-xs-12 col-xs--no-padded col-s--padded">
+                    Using --no-padded modifier forces to set padding back for bigger viewports again.
+                    This can be done by using --padded modifier again.
+                </div>
+            </section>
         </div>
 
 
