--- a/html/index.html
+++ b/html/index.html
@@ -96,6 +96,7 @@
             <div class="viewport-info__section viewport-info__section--sm">SM</div>
             <div class="viewport-info__section viewport-info__section--m">M</div>
             <div class="viewport-info__section viewport-info__section--ml">ML</div>
+            <div class="viewport-info__section viewport-info__section--l">L</div>
         </div>
     </body>
 </html>
